# t3

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  PUBLISH_GUIDE.md  README.md  RELEASE.md  SETUP_TOKEN.md  config.toml  config.yaml  demo.py  dev.py  pyproject.toml
.github/workflows/: ci-cd.yml  pr-validation.yml
scripts/: dev.sh  release.sh  setup-secrets.sh
t3/: __init__.py  main.py
t3-demo-project/: .gitignore  README.md  pyproject.toml
t3-demo-project/src/: main.py
t3/commands/: config.py  init.py
t3/core/: config.py  utils.py
test-project/: README.md  pyproject.toml
test-project/src/: main.py
tests/: test_config.py
